# ratel-adapter

./: .gitignore  CMakeLists.txt  boundary_debug.txt  ex03-dynamic.c  mesh_debug.cgns  output.cgns  package.json  patch_ex03.sh
examples/: beamexample.geo  beamexample.msh  ex02-quasistatic-precice.c  ex03-dynamic-precice.c  flap.geo  flap.msh  flap.yml  precice-config-ratel-dummy.xml  run-coupled.sh  test.c
include/ratel-adapter/: petsc-debug.h  ratel-adapter.h
precice-profiling/: SolverOne-0-1.txt  SolverTwo-0-1.txt
solverdummies/c/: solverdummy.c
solverdummies/precice-profiling/: SolverOne-0-1.txt  SolverTwo-0-1.txt
src/: adapter.c  data_mapping.c  mesh_extraction.c
